[package]
name = "ss-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]

# Error handling
anyhow = "1.0"
# Web framework
axum = { version = "0.8", features = ["ws"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"

# HTTP client - Using rustls instead of native-tls/openssl
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

# WebSocket
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }

# Utilities
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# Integration testing dependencies
tokio-test = "0.4"
